[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/MultiplayerUI.gd" type="Script" id=1]

[node name="MultiplayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextInputContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="TextInputContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0

[node name="PanelContainer" type="PanelContainer" parent="TextInputContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 508.0
size_flags_vertical = 3

[node name="TextOutput" type="RichTextLabel" parent="TextInputContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 7.0
margin_right = 953.0
margin_bottom = 501.0
scroll_following = true

[node name="TextInput" type="LineEdit" parent="TextInputContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 512.0
margin_right = 960.0
margin_bottom = 536.0
placeholder_text = "Enter in text here..."

[node name="UsernamePopup" type="PopupDialog" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="UsernamePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 200
custom_constants/margin_left = 300
custom_constants/margin_bottom = 200

[node name="PanelContainer" type="PanelContainer" parent="UsernamePopup/MarginContainer"]
margin_left = 300.0
margin_top = 200.0
margin_right = 724.0
margin_bottom = 400.0

[node name="CenterContainer" type="CenterContainer" parent="UsernamePopup/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer"]
margin_left = 77.0
margin_top = 55.0
margin_right = 333.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 15.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]Please enter a username:[/center]"
text = "Please enter a username:"
fit_content_height = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 256.0
margin_bottom = 23.0

[node name="UsernameInput" type="LineEdit" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 256.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Press enter afterwards..."

[node name="HBoxContainer" type="HBoxContainer" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 256.0
margin_bottom = 75.0

[node name="SubmitButton" type="Button" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Submit"

[node name="MainMenuButton" type="Button" parent="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Main Menu"

[node name="HostPopup" type="PopupDialog" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="HostPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 200
custom_constants/margin_left = 300
custom_constants/margin_bottom = 200

[node name="PanelContainer" type="PanelContainer" parent="HostPopup/MarginContainer"]
margin_left = 300.0
margin_top = 200.0
margin_right = 724.0
margin_bottom = 400.0

[node name="CenterContainer" type="CenterContainer" parent="HostPopup/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer"]
margin_left = 45.0
margin_top = 41.0
margin_right = 365.0
margin_bottom = 144.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 15.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]Select whether you are a host or a client.[/center]"
text = "Select whether you are a host or a client."
fit_content_height = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 320.0
margin_bottom = 23.0

[node name="HostHBox" type="HBoxContainer" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 320.0
margin_bottom = 51.0

[node name="HostPortInput" type="LineEdit" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HostHBox"]
unique_name_in_owner = true
margin_right = 158.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Port"

[node name="HostSubmit" type="Button" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HostHBox"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Host"

[node name="ClientHBox" type="HBoxContainer" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 320.0
margin_bottom = 79.0

[node name="ClientAddressInput" type="LineEdit" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ClientHBox"]
unique_name_in_owner = true
margin_right = 104.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Address"

[node name="ClientPortInput" type="LineEdit" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ClientHBox"]
unique_name_in_owner = true
margin_left = 108.0
margin_right = 212.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Port"

[node name="ClientSubmit" type="Button" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ClientHBox"]
margin_left = 216.0
margin_right = 320.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Join"

[node name="MainMenuButton" type="Button" parent="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 320.0
margin_bottom = 103.0
size_flags_horizontal = 3
text = "Main Menu"

[connection signal="text_entered" from="TextInputContainer/VBoxContainer/TextInput" to="." method="_on_TextInput_text_entered"]
[connection signal="text_entered" from="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/UsernameInput" to="." method="_on_UsernameInput_text_entered"]
[connection signal="pressed" from="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="UsernamePopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="text_entered" from="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HostHBox/HostPortInput" to="." method="_on_HostPortInput_text_entered"]
[connection signal="pressed" from="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/HostHBox/HostSubmit" to="." method="_on_HostSubmit_pressed"]
[connection signal="text_entered" from="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ClientHBox/ClientAddressInput" to="." method="_on_ClientAddressInput_text_entered"]
[connection signal="text_entered" from="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ClientHBox/ClientPortInput" to="." method="_on_ClientPortInput_text_entered"]
[connection signal="pressed" from="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ClientHBox/ClientSubmit" to="." method="_on_ClientSubmit_pressed"]
[connection signal="pressed" from="HostPopup/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
